kubernetes-intro/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: homework-pod
  namespace: homework
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}

  containers:
    - name: main-container
      image: nginx
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: shared-volume
          mountPath: /homework
      lifecycle:
        preStop:
          exec:
            command: ['sh', '-c', 'rm -f /homework/index.html']

  restartPolicy: Never
