kubernetes-intro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app: homework-deployment
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
